--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,54 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: lightslategray;
+}
+
+.image-body {
+  height: 200px;
+  width: 5px;
+  background: black;
+}
+
+.word-container {
+  font-size: 60px;
+  display: flex;
+  flex-direction: row;
+  width: 50vw;
+  justify-content: space-evenly;
+}
+
+.word-char {
+  border: 1px solid red;
+}
+
+.keyboard-container {
+  width: 100vw;
+}
+
+.keyboard {
+  display: grid;
+  grid-template-rows: repeat(3, 60px);
+  grid-template-columns: repeat(10, 60px);
+  grid-gap: 5px;
+  width: 100%;
+  justify-content: center;
+}
+
+.keyboard-key {
+  width: 60px;
+  height: 60px;
+  background: oldlace;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .App-logo {
