--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   background: lightslategray;
 }
 
-.image-body {
-  height: 200px;
-  width: 5px;
-  background: black;
+.game-over {
+  height: 100vh;
+  width: 100vw;
+  color: red;
+  background: rgba(50, 50, 50, 0.5);
+  font-size: 6em;
+  position: absolute;
+  /* filter: blur(10px); */
+  top: 0;
+  left: 0;
+  /* transform: translate(-400px, -250px); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.step-counter {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 3em;
 }
 
 .word-container {
@@ -24,7 +41,8 @@
 }
 
 .word-char {
-  border: 1px solid red;
+  width: 20px;
+  border-bottom: 10px solid black;
 }
 
 .keyboard-container {
@@ -49,6 +67,11 @@
   align-items: center;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.disabled {
+  opacity: 0.5;
+  cursor: default;
 }
 
 .App-logo {
