worked on stick figure got the plank walking to work based off of variables relating to difficulty why is package-lock.json not being ignored????????

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,11 @@
   font-size: 3em;
 }
 
+.image-container {
+  /* position: relative;
+  left: 0; */
+}
+
 .word-container {
   font-size: 60px;
   display: flex;
