--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
   height: 100vh;
@@ -59,24 +65,66 @@
   flex-direction: row;
   width: 50vw;
   justify-content: space-evenly;
+  border: 1px solid orange;
+
+  @media (max-width: 800px) {
+    width: 100vw;
+    position: absolute;
+    bottom: 40vh;
+  }
 }
 
 .word-char {
   width: 50px;
   border-bottom: 10px solid black;
+
+  @media (max-width: 800px) {
+    width: 30px;
+    border-bottom: 5px solid black;
+  }
 }
 
 .keyboard-container {
   width: 100vw;
+  height: auto;
 }
 
 .keyboard {
   display: grid;
-  grid-template-rows: repeat(3, 60px);
   grid-template-columns: repeat(10, 60px);
-  grid-gap: 5px;
+  grid-template-rows: repeat(3, 60px);
+  grid-gap: 10px;
   width: 100%;
   justify-content: center;
+  font-size: 2em;
+  text-transform: capitalize;
+
+  border: 1px solid red;
+
+  @media (max-width: 800px) {
+    position: absolute;
+    bottom: 10px;
+    height: 35vh;
+    margin-bottom: 10px;
+    grid-template-columns: repeat(8, auto);
+    grid-template-rows: repeat(auto, auto);
+
+    border: 1px solid green;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 1.5em;
+    grid-template-columns: repeat(8, auto);
+    grid-template-rows: repeat(auto, auto);
+  }
+
+  @media (max-width: 400px) {
+    font-size: 1.2em;
+    grid-gap: 5px;
+    width: 100vw;
+    grid-template-columns: repeat(6, auto);
+    grid-template-rows: repeat(5, auto);
+  }
 }
 
 .keyboard-key {
@@ -88,6 +136,16 @@
   align-items: center;
   border-radius: 5px;
   cursor: pointer;
+  border: 1px solid blue;
+
+  @media (max-width: 600px) {
+    width: 50px;
+    height: 50px;
+  }
+  @media (max-width: 500px) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .disabled {
