--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@
 .game-over {
   height: 100vh;
   width: 100vw;
-  color: red;
+  color: darkred;
   background: rgba(50, 50, 50, 0.5);
   font-size: 6em;
   position: absolute;
@@ -45,6 +45,25 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.redoBtn {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  font-size: 2em;
+  top: 10%;
+  left: calc(50% - 30px);
+  padding: 5px;
+  z-index: 10;
+  border: 3px solid green;
+  border-radius: 50%;
+  background: oldlace;
+  color: green;
+  cursor: pointer;
 }
 
 .step-counter {
