--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 .App {
@@ -12,7 +13,33 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  background: lightslategray;
+  // background: lightslategray;
+  z-index: 2;
+  position: relative;
+  background-color: rgb(30, 30, 30);
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
+    opacity: 0.8;
+
+    background-image: url("../public/ship3.png");
+    background-repeat: no-repeat;
+    background-size: 100vh;
+    // background-position: center;
+    background-position: center;
+
+    @media (max-width: 1200) {
+      background-size: cover;
+      background-position: center;
+    }
+  }
 }
 
 .game-over {
@@ -68,46 +95,71 @@
 
 .step-counter {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 10px;
+  right: 50vw;
+  transform: translateX(250px);
   font-size: 3em;
+  color: #cabba1;
+
+  @media (max-width: 1100px) {
+    transform: none;
+    right: 10px;
+  }
 }
 
 .difficultySelector {
-  width: 50px;
+  width: 200px;
   display: grid;
   text-align: left;
   grid-gap: 4px;
-  grid-template-columns: 2fr 1fr;
+
+  grid-template-columns: 0.5fr 2fr;
   grid-template-rows: repeat(3, 1fr);
 
   position: absolute;
   top: 10px;
-  left: 5px;
+  left: 50vw;
+  transform: translateX(-250px);
+  color: bisque;
+
+  @media (max-width: 1100px) {
+    left: 10px;
+    transform: none;
+  }
 }
 
 .image-container {
-  /* position: relative;
-  left: 0; */
+  position: relative;
+  width: 100vw;
+  max-width: 300px;
+  height: 400px;
+  top: 100px;
+
+  // border: 1px solid red;
 }
 
 .word-container {
-  font-size: 60px;
+  font-size: 35px;
+  font-weight: 700;
   display: flex;
   flex-direction: row;
-  width: 50vw;
-  justify-content: space-evenly;
+  width: 600px;
+  justify-content: space-between;
+
+  color: black;
+  position: absolute;
+  bottom: 35vh;
 
   @media (max-width: 800px) {
-    width: 100vw;
+    width: 95vw;
     position: absolute;
-    bottom: 40vh;
+    bottom: 35vh;
   }
 }
 
 .word-char {
-  width: 50px;
-  border-bottom: 10px solid black;
+  width: 30px;
+  border-bottom: 6px solid black;
 
   @media (max-width: 800px) {
     width: 30px;
@@ -117,7 +169,10 @@
 
 .keyboard-container {
   width: 100vw;
-  height: auto;
+  height: fit-content;
+
+  position: absolute;
+  bottom: 10px;
 }
 
 .keyboard {
@@ -129,24 +184,26 @@
   justify-content: center;
   font-size: 2em;
   text-transform: capitalize;
+  margin-bottom: 10px;
 
   @media (max-width: 800px) {
-    position: absolute;
     bottom: 10px;
-    height: 35vh;
-    margin-bottom: 10px;
     grid-template-columns: repeat(8, auto);
     grid-template-rows: repeat(auto, auto);
   }
 
   @media (max-width: 600px) {
     font-size: 1.5em;
+    bottom: 10px;
+
     grid-template-columns: repeat(8, auto);
     grid-template-rows: repeat(auto, auto);
   }
 
-  @media (max-width: 400px) {
+  @media (max-width: 380px) {
     font-size: 1.2em;
+    bottom: 10px;
+
     grid-gap: 5px;
     width: 100vw;
     grid-template-columns: repeat(6, auto);
@@ -157,7 +214,8 @@
 .keyboard-key {
   width: 60px;
   height: 60px;
-  background: oldlace;
+  // background: #fdf5e6;
+  background: #cabba1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -171,6 +229,10 @@
   @media (max-width: 500px) {
     width: 40px;
     height: 40px;
+  }
+  @media (max-width: 400px) {
+    width: 35px;
+    height: 35px;
   }
 }
 
