--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .App {
@@ -181,6 +181,7 @@
   grid-template-rows: repeat(3, 60px);
   grid-gap: 10px;
   width: 100%;
+  min-height: 200px;
   justify-content: center;
   font-size: 2em;
   text-transform: capitalize;
@@ -202,7 +203,8 @@
 
   @media (max-width: 380px) {
     font-size: 1.2em;
-    bottom: 10px;
+    margin-bottom: 0px;
+    bottom: 0px;
 
     grid-gap: 5px;
     grid-template-columns: repeat(6, auto);
