--- a/src/App.scss
+++ b/src/App.scss
@@ -93,6 +93,18 @@
   cursor: pointer;
 }
 
+.lookupBtn {
+  width: auto;
+  height: auto;
+  font-size: 2em;
+  padding: 10px;
+  background: rgba(200, 200, 200, 1);
+  border: none;
+  border-radius: 8px;
+  position: absolute;
+  bottom: 20%;
+}
+
 .step-counter {
   position: absolute;
   top: 10px;
