--- a/src/App.scss
+++ b/src/App.scss
@@ -105,6 +105,47 @@
   bottom: 20%;
 }
 
+.lookupCloseBtn {
+  position: absolute;
+  right: 10%;
+  top: 10%;
+  color: red;
+  cursor: pointer;
+}
+
+.definitionContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 50vw;
+  height: 30vh;
+  position: absolute;
+  bottom: 0;
+  background-image: url("../public/notelined.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  font-size: 1.5em;
+  border-radius: 12px;
+  z-index: 2;
+
+  p {
+    margin-left: 50px;
+  }
+
+  @media (max-width: 800px) {
+    width: 100vw;
+    border: 1px solid green;
+    background-size: 100vw;
+  }
+
+  .definitionList {
+    text-align: left;
+    width: 80%;
+  }
+}
+
 .step-counter {
   position: absolute;
   top: 10px;
@@ -199,9 +240,10 @@
   text-transform: capitalize;
   margin-bottom: 10px;
 
-  @media (max-width: 800px) {
+  @media (max-width: 700px) {
     bottom: 10px;
-    grid-template-columns: repeat(8, auto);
+
+    grid-template-columns: repeat(9, auto);
     grid-template-rows: repeat(4, auto);
   }
 
@@ -210,7 +252,7 @@
     bottom: 10px;
 
     grid-template-columns: repeat(7, auto);
-    grid-template-rows: repeat(4, auto);
+    grid-template-rows: repeat(5, auto);
   }
 
   @media (max-width: 380px) {
