--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@
     z-index: -1;
     opacity: 0.8;
 
-    background-image: url("../public/ship3.png");
+    background-image: url("../public/ship3.webp");
     background-repeat: no-repeat;
     background-size: 100vh;
     // background-position: center;
@@ -100,6 +100,7 @@
   top: 20%;
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
 
   transform: translateX(250px);
 
@@ -111,6 +112,7 @@
 }
 
 .hintBtn {
+  width: fit-content;
   padding: 8px;
   margin: 0.5em;
   border-radius: 6px;
@@ -125,7 +127,7 @@
 
 .toggledOn {
   opacity: 1;
-  background: rgba(30, 120, 30, 1);
+  background: rgba(40, 120, 40, 1);
 }
 
 .lookupBtn {
